--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddSaleAndPolicyTest.cs" />
     <Compile Include="AdminTest.cs" />
     <Compile Include="CartTest.cs" />
     <Compile Include="SaleInegrationTests.cs" />
