--- a/WebServices/WebServices.csproj
+++ b/WebServices/WebServices.csproj
@@ -197,6 +197,7 @@
     <Compile Include="DAL\BaseDBConnector.cs" />
     <Compile Include="DAL\BuyHistoryDB.cs" />
     <Compile Include="DAL\couponDB.cs" />
+    <Compile Include="DAL\DiscountDB.cs" />
     <Compile Include="Domain\Admin.cs" />
     <Compile Include="Domain\BuyHistoryArchive.cs" />
     <Compile Include="Domain\Coupon.cs" />
