--- a/WebServices/WebServices.csproj
+++ b/WebServices/WebServices.csproj
@@ -198,6 +198,7 @@
     <Compile Include="DAL\BuyHistoryDB.cs" />
     <Compile Include="DAL\couponDB.cs" />
     <Compile Include="DAL\DiscountDB.cs" />
+    <Compile Include="DAL\SaleDB.cs" />
     <Compile Include="Domain\Admin.cs" />
     <Compile Include="Domain\BuyHistoryArchive.cs" />
     <Compile Include="Domain\Coupon.cs" />
