--- a/IntegrationTests/IntegrationTests.csproj
+++ b/IntegrationTests/IntegrationTests.csproj
@@ -52,10 +52,10 @@
     <Compile Include="AdminTest.cs" />
     <Compile Include="CartTest.cs" />
     <Compile Include="SaleInegrationTests.cs" />
+    <Compile Include="ShoppingCartTest.cs" />
     <Compile Include="StorePremissionsArchiveTests.cs" />
     <Compile Include="StoreRoleTest.cs" />
     <Compile Include="storeTest.cs" />
-    <Compile Include="PayingSystemTest.cs" />
     <Compile Include="UserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
